fixed issue with text overlapping and being covered

--- a/src/App.css
+++ b/src/App.css
@@ -411,7 +411,7 @@ button.bounce {
 
 .social-ul li {
   display: inline;
-  width: 50%;
+  width: 70%;
 }
 
 .social-ul li:nth-child(2) {
